# simple-distributed-kv-store

./: README.md  consistent_hash.py  docker-compose.yml  main.py  pyproject.toml  redis_conn.py  zoo_setup.py
